[package]
name = "wallet_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "wallet_rs"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.32.5"
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
mockito = "1.1.0"
tokio = { version = "1.44.2", features = ["rt", "macros"] }